WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164462
Fix error message when SQLite initialization fails
https://bugs.webkit.org/show_bug.cgi?id=164462
Summary
Fix error message when SQLite initialization fails
Michael Catanzaro
Reported
2016-11-06 08:07:54 PST
Fix error message when SQLite initialization fails. It got broken by mistake in
r202379
. We previously had a complicated condition here to avoid using sqlite_errstr on older Macs because the machine that was building the software had a newer SQLite than users had installed.
Attachments
Patch
(1.42 KB, patch)
2016-11-06 08:09 PST
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2016-11-06 08:09:52 PST
Created
attachment 294024
[details]
Patch
WebKit Commit Bot
Comment 2
2016-11-09 11:13:20 PST
Comment on
attachment 294024
[details]
Patch Clearing flags on attachment: 294024 Committed
r208449
: <
http://trac.webkit.org/changeset/208449
>
WebKit Commit Bot
Comment 3
2016-11-09 11:13:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug