Fix error message when SQLite initialization fails https://bugs.webkit.org/show_bug.cgi?id=164462

Reviewed by Darin Adler.

* platform/sql/SQLiteDatabase.cpp:
(WebCore::initializeSQLiteIfNecessary):


Canonical link: https://commits.webkit.org/182181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208449 268f45cc-cd09-0410-ab3c-d52691b4dbfc